# src/main/resources/static/api.yaml
@@ -40,6 +40,39 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/Requisites"
+  /client:
+    get:
+      operationId: getClient
+      tags:
+        - client-req-controller
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  "$ref": "#/components/schemas/Client"
+  /client/{id}:
+    get:
+      operationId: getClientById
+      tags:
+        - client-req-controller
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/Client"
 components:
   schemas:
     Requisites:
@@ -50,9 +83,9 @@ components:
           format: uuid
         externalId:
           type: string
-        client_id:
+        clientId:
           type: string
-        name_company:
+        nameCompany:
           type: string
         inn:
           type: integer
@@ -63,20 +96,20 @@ components:
         ogrn:
           type: integer
           format: int64
-        business_address:
+        businessAddress:
           type: string
         address:
           type: string
         rcbic:
           type: integer
           format: int32
-        corr_ass:
+        corrAss:
           type: number
           format: double
         ass:
           type: number
           format: double
-        bank_name:
+        bankName:
           type: string
         created:
           type: string
@@ -84,3 +117,15 @@ components:
         updated:
           type: string
           format: date-time
+    Client:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        name:
+          type: string
+        requisitesList:
+          type: array
+          items:
+            "$ref": "#/components/schemas/Requisites"
